--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,21 @@ plugins {
     id 'java'
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+}
+
 group = 'ru.kopanev.spring'
-version = '1.0-SNAPSHOT'
+version = projectVersion
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation("org.projectlombok:lombok:1.18.42")
-    annotationProcessor("org.projectlombok:lombok:1.18.42")
-    testImplementation platform('org.junit:junit-bom:5.10.0')
+    implementation("org.projectlombok:lombok:${lombokVersion}")
+    annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
+    testImplementation platform("org.junit:junit-bom:${junitVersion}")
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
