--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,11 @@
+postgresDriverVersion=42.7.8
+liquibaseVersion=5.0.1
 lombokVersion=1.18.30
 junitVersion=5.10.0
 mockitoVersion=5.7.0
+testcontainersVersion=2.0.2
+hikariVersion=6.0.0
+slf4j=2.0.17
+logback=1.5.21
 
 projectVersion=1.0-SNAPSHOT
